hphp/test/slow/async/fail_callback_timeout.php.expectf
Warning: AsyncFunctionWaitHandle fail callback raised a fatal error: Maximum execution time of 6 seconds exceeded
 in %s/async/fail_callback_timeout.php on line 9

Fatal error: Uncaught exception 'Exception' with message 'x' in %s/async/fail_callback_timeout.php:9
Stack trace:
#0 (): heh()
#1 (): HH\WaitHandle->join()
#2 %s/async/fail_callback_timeout.php(16): HH\Asio\join()
#3 {main}
